--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">RandNum</string>
     <string name="log">기록</string>
     <string name="calcul">계산하기</string>
+    <string name="delete">초기화</string>
     <string name="count">난수 개수 :</string>
     <string name="max">최대값 :</string>
     <string name="min">최소값 :</string>
